--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 					<suiteXmlFiles>
 						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
+					 <reportsDirectory>target/surefire-reports</reportsDirectory>
 				</configuration>
 			</plugin>
 
