--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -31,8 +31,9 @@ jobs:
       - name: Generate HTML Report
         run: |
           mkdir -p test-results
-          cp -r target/surefire-reports/* test-results/
-
+          cp -r * test-output/
+          cp -r * screenshots/
+          
       - name: Upload Test Report Artifact
         uses: actions/upload-artifact@v4
         with:
@@ -50,7 +51,7 @@ jobs:
           to: "keerthana.elango@indegene.com"
           from: "GitHub Actions <ekeerthana94@gmail.com>"
           content_type: text/html
-          attachments: test-results/*.xml
+          attachments: test-results/*.html
           body: |
             <h2>Test Results</h2>
             <p>Find the attached test execution report.</p>
