--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -31,25 +31,25 @@ jobs:
       - name: Run Automation Tests
         run: mvn test  # Change to your test execution command
 
-      - name: copy HTML Report
-        run: |
-          mkdir -p test-results/test-output
-          cp -r test-output/* test-results/test-output/
+      - name: Create Test Results Directory
+        run: mkdir -p test-results
 
-      - name: Copy Screenshots to Test Results
+      - name: Copy HTML Report & Screenshots to Test Results
         run: |
-          mkdir -p test-results/test-output/screenshots
-          cp -r screenshots/* test-results/test-output/screenshots/
+          cp -r test-output/ExtentReport.html test-results/
+          mkdir -p test-results/screenshots
+          cp -r screenshots/* test-results/screenshots/
 
-      - name: Zip Screenshots
+      - name: Create ZIP file with HTML Report and Screenshots
         run: |
-          zip -r test-results/screenshots.zip screenshots/
-          
+          cd test-results
+          zip -r TestReport.zip ExtentReport.html screenshots/
+
       - name: Upload Test Report Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Test-Results
-          path: test-results
+          name: Test-Report
+          path: test-results/TestReport.zip
 
       - name: Send Email Notification
         uses: dawidd6/action-send-mail@v3
@@ -62,12 +62,9 @@ jobs:
           to: "keerthana.elango@indegene.com"
           from: "GitHub Actions <githubActions@example.com>"
           content_type: text/html
-          attachments: |
-            test-results/test-output/ExtentReport.html
-            test-results/screenshots.zip
+          attachments: test-results/TestReport.zip
           body: |
             Test Results
             Find the attached test execution report.
             Branch: ${{ github.ref }}
             Commit: ${{ github.sha }}
-
