--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -25,6 +25,12 @@ jobs:
       - name: Install Chrome
         run: sudo apt-get install -y google-chrome-stable
 
+      - name: Set Display Resolution
+        run: |
+          sudo apt-get install -y xvfb
+          Xvfb :99 -screen 0 1920x1080x24 &
+          echo "DISPLAY=:99" >> $GITHUB_ENV
+
       - name: Clean Old Screenshots
         run: rm -rf screenshots/* || true
 
